Fix form alignment

--- a/src/main/resources/public/app.css
+++ b/src/main/resources/public/app.css
@@ -94,3 +94,7 @@ a {
 .profilePic img {
   width: 290px;
 }
+
+.mapDiv {
+  margin-top: 20px;
+}
